Change some citations to footnotes
Changed some obvious citations, like Netflix, to be just footnotes
instead. This makes it seem far more professional as a result.

--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -20,7 +20,7 @@ Through building the application I hope to explore the architectural and develop
 
 \subsection{Technical Impact}
 
-Traditional software architectures that are commonly associated with the internet, such as client-server, cannot be used with the SAFE Network. Thus different architectural approaches must be taken when building the software that interacts with the network. It is always stimulating to work with new technology and the SAFE Network definitely promises that opportunity. Through this report I hope to not only convey my experience working with the SAFE Network, but also outline any flaws and issues I can see with both adoption and practical usage. This is in combination with exploring the new opportunities the network provides for softare development.
+Traditional software architectures that are commonly associated with the internet, such as client-server, cannot be used with the SAFE Network. Thus different architectural approaches must be taken when building the software that interacts with the network. It is always stimulating to work with new technology and the SAFE Network definitely promises that opportunity. Through this report I hope to not only convey my experience working with the SAFE Network, but also outline any flaws and issues I can see with both adoption and practical usage. This is in combination with exploring the new opportunities the network provides for software development.
 
 \subsection{Cultural Impact}
 
