--- a/sections/02-the-safe-network.tex
+++ b/sections/02-the-safe-network.tex
@@ -3,7 +3,7 @@
 
 \section{Decentralisation}
 
-Decentralisation of data is the core benefit of the SAFE Network. As with many things in life, once someone has ownership or control of something they can either use that position of power for good purposes or for less desirable ones. The internet as it exists today is very fragile in this regard. When you upload a file to Dropbox\cite{dropbox} or OneDrive\cite{onedrive} that file exists solely on the servers that those organisations have control over. Once an organisation has data they can do with it what they please, acting within the bounds of overcomplicated privacy polices to manage user data. Not only does this incur the obvious privacy infringements but it can lead someone into the false sense of security that their data is safe. If someone managed to hack Dropbox or there was a catastrophic failure at the datacenter, a user has no assurances their data is safe. On a much larger scale companies like Amazon provide AWS\cite{amazon-aws}, an enterprise grade cloud-computing platform. If AWS were to fail, or be targeted, many of the worlds biggest websites would cease to function. This is because of the centralisation of resources. It is not necessarily an easy target, but it is a single identifiable piece of the equation that if removed, causes the whole thing to collapse.
+Decentralisation of data is the core benefit of the SAFE Network. As with many things in life, once someone has ownership or control of something they can either use that position of power for good purposes or for less desirable ones. The internet as it exists today is very fragile in this regard. When you upload a file to Dropbox\footnote{https://www.dropbox.com} or OneDrive\footnote{https://onedrive.live.com} that file exists solely on the servers that those organisations have control over. Once an organisation has data they can do with it what they please, acting within the bounds of overcomplicated privacy polices to manage user data. Not only does this incur the obvious privacy infringements but it can lead someone into the false sense of security that their data is safe. If someone managed to hack Dropbox or there was a catastrophic failure at the datacenter, a user has no assurances their data is safe. On a much larger scale companies like Amazon provide AWS\footnote{https://aws.amazon.com/}, an enterprise grade cloud-computing platform. If AWS were to fail, or be targeted, many of the worlds biggest websites would cease to function. This is because of the centralisation of resources. It is not necessarily an easy target, but it is a single identifiable piece of the equation that if removed, causes the whole thing to collapse.
 
 Trust is at the core of decentralisation. Centralised control of resources requires trust in the facilitators of that resource. You have to trust that the resource is free of corruption and indeed trust that it won't be in the future. Companies readily change polices upon acquisition and managerial changes so this trust has to withhold over the course of time. Decentralised models of governance can be used to alleviate these problems. Through autonomous governance entities such as the SAFE Network can ensure equality to all participants. It achieves this through a system of `trust-less' cooperation between nodes. Vaults on the network do not inherently trust other vaults. Every action on the network must be reach a quorum before it is considered valid by the vaults. This autonomous self-governance is what decentralises the `trust' you must impart on the network to store data.
 
