--- a/sections/04-safe-wiki.tex
+++ b/sections/04-safe-wiki.tex
@@ -113,7 +113,7 @@ An important feature that is facilitated through the use of \textit{Data Maps}(S
 
 \begin{figure}[h]
 	\begin{center}
-		\includegraphics[width=\textwidth]{images/safe-wiki-browsing-coffee}
+		\includegraphics[scale=0.6]{images/safe-wiki-browsing-coffee}
 		\caption{Browsing a page from the StackOverflow Coffee ZIM file on the SAFE Network}
 		\label{fig:browsing-coffee}
 	\end{center}
