--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -48,7 +48,7 @@ The storage of data is where the SAFE Network excels. Immutable Data on the SAFE
 
 \subsection{Companies cannot own third party data}
 
-As discussed previously, data on the SAFE Network cannot be deleted. This means that under current laws and regulations, companies would find it extremely difficult to operate under their current methods. If for instance a user requested that their data was deleted, the company simply wouldn't be able to if it was stored on the SAFE Network. All they could do is the equivalent of throwing away the key to a filing cabinet. Amongst many other reasons, this is why companies cannot own ``third party'' data on the SAFE Network. How this is handled needs to be flipped to a model where users/companies own their own data. Instead of a user giving companies their data, they give the companies access to their data to facilitate the services they wish to access. This model means that services would need to be built around the idea that the source of the data is ultimately in control of that data. For services like Netflix, this would mean that the content produces would simply grant access to their videos and Netflix would then simply exist as an intermediary between the consumer and the video. This model means the content producer owns their own content.
+As discussed previously, data on the SAFE Network cannot be deleted. This means that under current laws and regulations, companies would find it extremely difficult to operate under their current methods. If for instance a user requested that their data was deleted, the company simply wouldn't be able to if it was stored on the SAFE Network. All they could do is the equivalent of throwing away the key to a filing cabinet. Amongst many other reasons, this is why companies cannot own ``third party'' data on the SAFE Network. How this is handled needs to be flipped to a model where users/companies own their own data. Instead of a user giving companies their data, they give the companies access to their data to facilitate the services they wish to access. This model means that services would need to be built around the idea that the source of the data is ultimately in control of that data. For services like Netflix\footnote{https://www.netflix.com/}, this would mean that the content produces would simply grant access to their videos and Netflix would then simply exist as an intermediary between the consumer and the video. This model means the content producer owns their own content.
 
 \section{Future Improvements to SAFE Wiki}
 
