--- a/sections/06-conclusion.tex
+++ b/sections/06-conclusion.tex
@@ -2,7 +2,7 @@
 
 Evaluating the SAFE Network in its current state does the project an injustice. It is not finished yet and they don't claim it to be. Uncertainties in implementation details, especially \textit{Safecoin}, brings into question how successful the project will be in the long run. Proper incentives for \textit{vault} owners is crucial in the success of the network. The next big step for the project is the implementation of Datachain's (Section \ref{sec:datachain}) and it will be very interesting to see how successful that is. Maidsafe have performed simulations on how \textit{section splits} and \textit{merges} will happen but to see how things handle with a real network will be interesting. There is the real concern of what happens when large parts of the network fail, something that Datachain's hope to address.
 
-The infancy of the SAFE Network has made this project difficult. No central and reliable resources for developers is nightmarish when time is precious, such as in building SAFE Wiki. Upon conclusion of this project SAFE Wiki is a fully functional application that can be used with the current version of the SAFE Network. Assuming that the API won't have any ``breaking'' changes, if and when the SAFE Network fully launches SAFE Wiki will be available for use. People all over the world will be able to access resources like Wikipedia that are hosted on a decentralised and censorship resistant platform.
+The infancy of the SAFE Network has made this project difficult. No central and reliable resources for developers is nightmarish when time is precious, such as in building SAFE Wiki. Upon conclusion of this project, SAFE Wiki is a fully functional application that can be used with the current version of the SAFE Network. Assuming that the API won't have any ``breaking'' changes, if and when the SAFE Network fully launches SAFE Wiki will be available for use. People all over the world will be able to access resources like Wikipedia that are hosted on a decentralised and censorship resistant platform.
 
 The SAFE Network ultimately provides an interesting new way to develop applications and services. Developers will have to re-think how they build applications and give proper attention as to how to exploit the characteristics of the SAFE Network to their benefit. Although SAFE Wiki demonstrates that the secure storage and retrieval of data is already possible, more studies and analysis on the feasibility of different applications on the  SAFE Network is needed. Specifically the feasibility of running large websites and services that require extremely fast processing of data needs to be researched fully. The performance of how a world wide SAFE Network with dynamic growth and decay will only be known once it fully launches. It is only then that a true mandate for the use of the SAFE Network can be established. 
 
