Add discussion on using local networks
To give more substance to the evaluation, I have added a section that
discusses how viable it is to run a viable local SAFE Network for
testing.

--- a/sections/04-safe-wiki.tex
+++ b/sections/04-safe-wiki.tex
@@ -1,4 +1,4 @@
-\chapter{SAFE Wiki}
+\chapter{Implementation of SAFE Wiki}
 
 SAFE Wiki is an application that allows users to both upload and browse content that can be stored in a ZIM file. The ZIM file format allows you to easily store content from the web, one of its uses is in the distribution of Wikimedia based content.
 
