--- a/dissertation.tex
+++ b/dissertation.tex
@@ -6,6 +6,10 @@
 backend=biber,
 style=ieee
 ]{biblatex}
+
+\usepackage{pgfplots}
+\pgfplotsset{width=10cm,compat=1.9} 
+
 \addbibresource{bibliography.bib}
 
 \begin{document}
